<resources>
    <string name="app_name">APP</string>
    <string name="senha">Senha</string>
    <string name="login">Log In</string>
    <string name="usuario">Usuário</string>
    <string name="login_logo">Login</string>
    <string name="register_text">Não é cadastrado? Faça seu cadastro</string>
    <string name="register">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>